[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "python-telegram-bot==13.15",
    "requests>=2.32.4",
    "solana>=0.36.7",
    "solders>=0.26.0",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
]
